# TechAiFriendBackend

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0feea92259a6_added_relationships.py  1a64607a0b6a_initial.py  4b27a083cb2c_other_tables.py  bdecfedce6b7_added_ai_description_to_photos.py
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: help.py  information.py  users.py
app/core/: database.py
app/core/configs/: __init__.py  celery.py  database.py  general.py  redis.py
app/infrastructure/: vk_api_infra.py
app/infrastructure/neural/: neural_infra.py
app/infrastructure/neural/models/: image_desc.py  image_questions.py  text_translator.py
app/infrastructure/neural/processors/: clothes_color.py  clothes_style.py  image_category.py
app/models/: __init__.py  friends.py  groups.py  photo.py  photos.py  posts.py  user.py
app/repository/: base_repository.py  friends_repository.py  groups_repository.py  photo_repository.py  posts_repository.py  user_repository.py
app/schema/: add_user_schema.py  table_schema.py  user_schema.py
app/services/: information_service.py  photo_service.py  user_service.py
app/tasks/: __init__.py  neural_network.py
app/utils/: api_utils.py
docker_compose/: app.yaml  storages.yaml
docker_compose/tech_ai_database/: postmaster.pid
docker_compose/tech_ai_database/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
docker_compose/tech_ai_database/pg_xact/: 0000
(+111 files in other folders)
